// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Appointment Slot Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="storyBackground"
  >
    <div>
      <div
        className="listHeader"
      >
        <div
          className="time"
        >
          11:00
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer availableAppointment"
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="deleteButton"
            onClick={[Function]}
          >
            <svg>
              trash.svg
            </svg>
            <div
              className="deleteButtonText"
            >
              מחק תור
            </div>
          </div>
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
              onClick={[Function]}
            >
              <div
                className="availableAppointmentText"
              >
                תור ריק
              </div>
            </div>
            <svg
              onClick={[Function]}
            >
              add-person.svg
            </svg>
          </div>
        </div>
        <div
          className="dividerContainer"
        >
          <div
            className="divider"
          />
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer bookedAppointment"
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="deleteButton"
            onClick={[Function]}
          >
            <svg>
              trash.svg
            </svg>
            <div
              className="deleteButtonText"
            >
              מחק תור
            </div>
          </div>
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
              onClick={[Function]}
            >
              <div
                className="donorName"
              >
                משה כהן
              </div>
            </div>
            <svg
              onClick={[Function]}
            >
              chevron-left.svg
            </svg>
          </div>
        </div>
        <div
          className="dividerContainer"
        >
          <div
            className="divider"
          />
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer booked"
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="deleteButton"
            onClick={[Function]}
          >
            <svg>
              trash.svg
            </svg>
            <div
              className="deleteButtonText"
            >
              מחק תור
            </div>
          </div>
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
              onClick={[Function]}
            >
              <div
                className="donorName"
              >
                משה כהן
              </div>
              <div
                className="recentChangeChipContainer"
              >
                <div
                  className="recentChangeChip greenChip"
                >
                  חדש
                </div>
              </div>
            </div>
            <svg
              onClick={[Function]}
            >
              chevron-left.svg
            </svg>
          </div>
        </div>
        <div
          className="dividerContainer"
        >
          <div
            className="divider"
          />
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer completed"
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="deleteButton"
            onClick={[Function]}
          >
            <svg>
              trash.svg
            </svg>
            <div
              className="deleteButtonText"
            >
              מחק תור
            </div>
          </div>
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
              onClick={[Function]}
            >
              <div
                className="donorName"
              >
                משה כהן
              </div>
              <div
                className="recentChangeChipContainer"
              >
                <div
                  className="recentChangeChip greenChip"
                >
                  הושלם
                </div>
              </div>
            </div>
            <svg
              onClick={[Function]}
            >
              chevron-left.svg
            </svg>
          </div>
        </div>
        <div
          className="dividerContainer"
        >
          <div
            className="divider"
          />
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer no show"
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="deleteButton"
            onClick={[Function]}
          >
            <svg>
              trash.svg
            </svg>
            <div
              className="deleteButtonText"
            >
              מחק תור
            </div>
          </div>
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
              onClick={[Function]}
            >
              <div
                className="donorName"
              >
                משה כהן
              </div>
              <div
                className="recentChangeChipContainer"
              >
                <div
                  className="recentChangeChip redChip"
                >
                  לא הגיע
                </div>
              </div>
            </div>
            <svg
              onClick={[Function]}
            >
              chevron-left.svg
            </svg>
          </div>
        </div>
        <div
          className="dividerContainer"
        >
          <div
            className="divider"
          />
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer cancelled"
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="deleteButton"
            onClick={[Function]}
          >
            <svg>
              trash.svg
            </svg>
            <div
              className="deleteButtonText"
            >
              מחק תור
            </div>
          </div>
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
              onClick={[Function]}
            >
              <div
                className="availableAppointmentText"
              >
                תור ריק
              </div>
              <div
                className="recentChangeChipContainer"
              >
                <div
                  className="recentChangeChip redChip"
                >
                  בוטל לאחרונה
                </div>
              </div>
            </div>
            <svg
              onClick={[Function]}
            >
              add-person.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Appointment Slot Only Available Appointments 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="storyBackground"
  >
    <div>
      <div
        className="listHeader"
      >
        <div
          className="time"
        >
          11:00
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer availableAppointment"
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="deleteButton"
            onClick={[Function]}
          >
            <svg>
              trash.svg
            </svg>
            <div
              className="deleteButtonText"
            >
              מחק תור
            </div>
          </div>
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
              onClick={[Function]}
            >
              <div
                className="availableAppointmentText"
              >
                תור ריק
              </div>
            </div>
            <svg
              onClick={[Function]}
            >
              add-person.svg
            </svg>
          </div>
        </div>
        <div
          className="dividerContainer"
        >
          <div
            className="divider"
          />
        </div>
      </div>
      <div>
        <div
          className="appointmentPreviewContainer cancelled"
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="deleteButton"
            onClick={[Function]}
          >
            <svg>
              trash.svg
            </svg>
            <div
              className="deleteButtonText"
            >
              מחק תור
            </div>
          </div>
          <div
            className="appointmentPreviewContent"
          >
            <div
              className="nameAndChip"
              onClick={[Function]}
            >
              <div
                className="availableAppointmentText"
              >
                תור ריק
              </div>
              <div
                className="recentChangeChipContainer"
              >
                <div
                  className="recentChangeChip redChip"
                >
                  בוטל לאחרונה
                </div>
              </div>
            </div>
            <svg
              onClick={[Function]}
            >
              add-person.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
